--- a/API/package.json
+++ b/API/package.json
@@ -8,7 +8,7 @@
   "name": "server",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon app.js"
   },
