--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
